# chimera-agent-infra

./: .coderabbit.yaml  AGENT_RULES.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
.specify/memory/: constitution.md
research/: architecture_strategy.md  summary.md  tooling_strategy.md
skills/skill_generate_media/: README.md
skills/skill_process_payment/: README.md
skills/skill_trend_fetch/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/001-chimera-ai-network/: spec.md  tasks.md
specs/001-chimera-ai-network/plan/: plan.md
tests/: test_skills_interface.py  test_trend_fetcher.py
