[project]
name = "chimera-agent-infra"
version = "0.1.0"
description = "Architecting the Factory for Autonomous Influencer Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdp-sdk>=1.39.1",
    "langchain>=1.2.8",
    "mcp>=1.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.54.0",
    "python-dotenv>=1.2.1",
    "weaviate-client>=4.19.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
]
